--- a/index.html
+++ b/index.html
@@ -4,7 +4,145 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css">  
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item_no-bullit">главная</li>
+          <li class="header__links-list-item"><a href="#">посмотреть лоты</a></li>
+          <li class="header__links-list-item"><a href="#">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="header__logo" href="#">
+        <img class="header__logo-image"
+        src="./images/logo-black.svg" alt="Логотип компании черного цвета">
+      </a>
+      <address class="address"> 
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text_left">оно</span>
+          <span class="aligned-text_center">тебе</span>
+          <span class="aligned-text_right">надо</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">
+            Сделать ставку
+          </button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">
+          лоты
+        </h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item-cinema">
+            <a class="card-link" href="#">
+            <article class="card">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                Фильм режиссёра, который бросил киношколу
+              </h3>
+              <p class="card__text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </article>
+          </a>
+          </li>
+          <li class="lots__card-list-item-book">
+            <a class="card-link" href="#">
+              <article class="card">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item_art">
+            <a class="card-link" href="#">
+              <article class="card">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="column">
+          <div class="about__logo">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип компании белого цвета">
+          </div>
+          </div>
+          <div class="column">
+            <h2 class="about__title">Об аукционе</h2>
+            <div class="about__text">
+              <p>
+                Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+              </p>
+            </div>
+          </div>
+      </section>
+    </main>
+    <footer class="footer">
+     <address class="address__footer"> 
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
+      </address>
+      <nav class="footer__menu-list">
+        <ul class="footer__menu-list-item">
+          <li><a class="footer__menu-link_active href="#">главная</a></li>
+          <li><a class="footer__menu-link" href="#">посмотреть слоты</a></li>
+          <li><a class="footer__menu-link" href="#">об аукционе</a></li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="youtube">
+        </a>
+      </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="vkontakte">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="pinterest">
+          </a>
+        </li>
+      </ul>
+    </footer>
+
+  </body>
 </html>
