--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </address>
       <nav class="footer__menu-list">
         <ul class="footer__menu-list-item">
-          <li><a class="footer__menu-link_active href="#">главная</a></li>
+          <li><a class="footer__menu-link_active" href="#">главная</a></li>
           <li><a class="footer__menu-link" href="#">посмотреть слоты</a></li>
           <li><a class="footer__menu-link" href="#">об аукционе</a></li>
         </ul>
