--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <p>
                 Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
               </p>
-              <p>
+              <p class="about__text-second">
                 Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
 на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
               </p>
@@ -121,7 +121,7 @@
       <nav class="footer__menu-list">
         <ul class="footer__menu-list-item">
           <li><a class="footer__menu-link_active" href="#">главная</a></li>
-          <li><a class="footer__menu-link" href="#">посмотреть слоты</a></li>
+          <li><a class="footer__menu-link" href="#">посмотреть лоты</a></li>
           <li><a class="footer__menu-link" href="#">об аукционе</a></li>
         </ul>
       </nav>
