--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit">главная</li>
-          <li class="header__links-list-item"><a href="#">посмотреть лоты</a></li>
-          <li class="header__links-list-item"><a href="#">об аукционе</a></li>
+          <li><a class="header__links-list-item link_active" href="#">главная</a></li>
+          <li><a class="header__links-list-item" href="#">посмотреть лоты</a></li>
+          <li><a class="header__links-list-item" href="#">об аукционе</a></li>
         </ul>
       </nav>
       <a class="header__logo" href="#">
@@ -50,7 +50,7 @@
           лоты
         </h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item-cinema">
+          <li class="card lots__card-list-item-cinema">
             <a class="card-link" href="#">
             <article class="card">
               <div class="overlay"></div>
@@ -63,7 +63,7 @@
             </article>
           </a>
           </li>
-          <li class="lots__card-list-item-book">
+          <li class="card lots__card-list-item-book">
             <a class="card-link" href="#">
               <article class="card">
                 <div class="overlay"></div>
@@ -76,7 +76,7 @@
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item_art">
+          <li class="card lots__card-list-item_art">
             <a class="card-link" href="#">
               <article class="card">
                 <div class="overlay"></div>
@@ -104,7 +104,7 @@
               <p>
                 Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
               </p>
-              <p class="about__text-second">
+              <p>
                 Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
 на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
               </p>
@@ -120,7 +120,7 @@
       </address>
       <nav class="footer__menu-list">
         <ul class="footer__menu-list-item">
-          <li><a class="footer__menu-link_active" href="#">главная</a></li>
+          <li><a class="footer__menu-link link_active" href="#">главная</a></li>
           <li><a class="footer__menu-link" href="#">посмотреть лоты</a></li>
           <li><a class="footer__menu-link" href="#">об аукционе</a></li>
         </ul>
