--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li><a class="header__links-list-item link_active" href="#">главная</a></li>
-          <li><a class="header__links-list-item" href="#">посмотреть лоты</a></li>
-          <li><a class="header__links-list-item" href="#">об аукционе</a></li>
+          <li class="header__links-list-item no_built"><a class="link link_active" href="#">главная</a></li>
+          <li class="header__links-list-item"><a class="link" href="#">посмотреть лоты</a></li>
+          <li class="header__links-list-item"><a class="link" href="#">об аукционе</a></li>
         </ul>
       </nav>
       <a class="header__logo" href="#">
         <img class="header__logo-image"
         src="./images/logo-black.svg" alt="Логотип компании черного цвета">
       </a>
-      <address class="address"> 
+      <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <span>наб. Принсенграхт 263- 265, Амстердам</span>
@@ -113,16 +113,16 @@
       </section>
     </main>
     <footer class="footer">
-     <address class="address__footer"> 
+     <address class="address address__footer">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <span>наб. Принсенграхт 263- 265, Амстердам</span>
+        <span>наб. Принсенграхт 263-265, Амстердам</span>
       </address>
-      <nav class="footer__menu-list">
-        <ul class="footer__menu-list-item">
-          <li><a class="footer__menu-link link_active" href="#">главная</a></li>
-          <li><a class="footer__menu-link" href="#">посмотреть лоты</a></li>
-          <li><a class="footer__menu-link" href="#">об аукционе</a></li>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item"><a class="footer__menu-link link_active" href="#">главная</a></li>
+          <li class="footer__menu-list-item"><a class="footer__menu-link" href="#">посмотреть лоты</a></li>
+          <li class="footer__menu-list-item"><a class="footer__menu-link" href="#">об аукционе</a></li>
         </ul>
       </nav>
       <ul class="footer__social-list">
