--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item no_built"><a class="link link_active" href="#">главная</a></li>
+          <li class="header__links-list-item header__links-list-item_no-bulit"><a class="link link_active" href="#">главная</a></li>
           <li class="header__links-list-item"><a class="link" href="#">посмотреть лоты</a></li>
           <li class="header__links-list-item"><a class="link" href="#">об аукционе</a></li>
         </ul>
